--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my_synmonp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://solariswu.github.io/synonyms",
   "dependencies": {
     "aws-amplify": "^1.2.4",
     "aws-amplify-react": "^2.5.4",
