--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "aws-amplify-react": "^2.5.4",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "typescript": "^3.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
